--- a/social/client/package.json
+++ b/social/client/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "timeago": "^1.6.7",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
